src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_3_errors.snap
---
source: src/parser/test.rs
description: "if (x) { let x = 1; x < }"
expression: "parser_errors(\"if (x) { let x = 1; x < }\", errors)"
---
if (x) { let x = 1; x < }
                      ^ SyntaxError: Unexpected '}'.
